--- a/02_04_Classes.ipynb
+++ b/02_04_Classes.ipynb
@@ -25,14 +25,14 @@
    "source": [
     "class item:\n",
     "    \n",
-    "    def _init_(self, item_name, price):\n",
+    "    def __init__(self, item_name, price):\n",
     "        self.item_name=item_name\n",
     "        self.price=price\n",
     "        \n",
     "    \n",
     "\n",
     "class customer:\n",
-    "    def _init_(self, cust_id, phone):\n",
+    "    def __init__(self, cust_id, phone):\n",
     "        self.cust_id=cust_id\n",
     "        self.phone=phone\n",
     "    def purchase(self, item_price, amount):\n",
