--- a/01_KNN_Assigment.ipynb
+++ b/01_KNN_Assigment.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. "
+    "### 1. "
    ]
   },
   {
@@ -468,24 +468,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. KNN is computationally inefficient because for every point, it processes all points in the set in order to calculate the distances. Also after calculating all distances, it goes through all points to find the nearest point. Its order of complexity is n-squared."
+    "### 2. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. "
+    "KNN is computationally inefficient because for every point, it processes all points in the set in order to calculate the distances. Also after calculating all distances, it goes through all points to find the nearest point. Its order of complexity is n-squared."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. "
    ]
   },
   {
@@ -501,9 +501,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. a. True  \n",
-    "   b. True  \n",
-    "   c. True  "
+    "### 4."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " a. True  \n",
+    " b. True  \n",
+    " c. True  "
    ]
   },
   {
